Run students' submissions in a sandboxed environment, using a custom security manager